added pictures to the cards

--- a/index1.html
+++ b/index1.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 </head>
 
 <body>
@@ -61,6 +62,9 @@
         <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
     </div>
     <!-- jumbotron ends -->
+    <!-- carousal starts -->
+    
+    <!-- carousal ends -->
     <div class="container mb-5">
         <img src="./public/capture11.jpg" alt="">
     </div>
@@ -83,7 +87,7 @@
             <div class="row ml-4 mt-4">
                 <div class="col">
                     <div class="card" style="width: 18rem;">
-                        <img src="pexels-photo-1239291.jpg" class="card-img-top" alt="...">
+                        <img src="./public/pexels-photo-1239291.jpg" class="card-img-top" alt="...">
                         <div class="card-body text-center">
                             <p class="card-text">“There is no greater agony than bearing an untold story inside you.”
                             </p>
@@ -92,7 +96,7 @@
                 </div>
                 <div class="col">
                     <div class="card" style="width: 17.5rem;">
-                        <img src="sfes.jpg" class="card-img-top" alt="...">
+                        <img src="./public/sfes.jpg" class="card-img-top" alt="...">
                         <div class="card-body text-center">
                             <p class="card-text">“You can never get a cup of tea large enough or a book long enough to
                                 suit me.” </p>
@@ -101,7 +105,7 @@
                 </div>
                 <div class="col">
                     <div class="card" style="width: 18rem;">
-                        <img src="fourth.jpg" class="card-img-top" alt="...">
+                        <img src="./public/fourth.jpg" class="card-img-top" alt="...">
                         <div class="card-body text-center">
                             <p class="card-text">“It’s no use going back to yesterday, because I was a different person
                                 then.”</p>
@@ -114,7 +118,7 @@
             <div class="row ml-4 mt-4">
                 <div class="col">
                     <div class="card" style="width: 18rem;">
-                        <img src="aurat1.jpg" class="card-img-top" alt="...">
+                        <img src="./public/aurat1.jpg" class="card-img-top" alt="...">
                         <div class="card-body text-center">
                             <p class="card-text">“Who controls the past controls the future. Who controls the present
                                 controls the past.” </p>
@@ -123,7 +127,7 @@
                 </div>
                 <div class="col">
                     <div class="card" style="width: 18rem;">
-                        <img src="aurat 2.jpg" class="card-img-top" alt="...">
+                        <img src="./public/aurat 2.jpg" class="card-img-top" alt="...">
                         <div class="card-body text-center">
                             <p class="card-text">“Happiness is not something ready made. It comes from your own
                                 actions.”</p>
@@ -132,7 +136,7 @@
                 </div>
                 <div class="col">
                     <div class="card" style="width: 18rem;">
-                        <img src="last.jpg" class="card-img-top" alt="...">
+                        <img src="./public/last.jpg" class="card-img-top" alt="...">
                         <div class="card-body text-center">
                             <p class="card-text">“What lies behind us and what lies before us are tiny matters compared
                                 to what lies within us.”</p>
